cmake_minimum_required(VERSION 3.0)

add_executable(mementoPatternExample behavioural/memento.cpp)
add_executable(statePatternExample behavioural/state.cpp)
add_executable(iteratorPatternExample behavioural/iterator.cpp)
add_executable(strategyPatternExample behavioural/strategy.cpp)
add_executable(templatePatternExample behavioural/template.cpp)
add_executable(commandPatternExample behavioural/command.cpp)
add_executable(observerPushPatternExample behavioural/observer_push.cpp)
add_executable(observerPullPatternExample behavioural/observer_pull.cpp)
