cmake_minimum_required(VERSION 3.0)

# Behavioural Design Patterns
add_executable(mementoPatternExample behavioural/memento.cpp)
add_executable(statePatternExample behavioural/state.cpp)
add_executable(iteratorPatternExample behavioural/iterator.cpp)
add_executable(strategyPatternExample behavioural/strategy.cpp)
add_executable(templatePatternExample behavioural/template.cpp)
add_executable(commandPatternExample behavioural/command.cpp)
add_executable(observerPushPatternExample behavioural/observer_push.cpp)
add_executable(observerPullPatternExample behavioural/observer_pull.cpp)
add_executable(mediatorPatternExample behavioural/mediator.cpp)
add_executable(mediatorWithObserverExample behavioural/mediator_with_observer.cpp)
add_executable(chainOfResponsibilityPatternExample behavioural/chain_of_responsibility.cpp)
add_executable(visitorPatternExample behavioural/visitor.cpp)

# Structural Design Patterns
add_executable(compositePatternExample structural/composite.cpp)
add_executable(adapterPatternExample structural/adapter.cpp)
add_executable(decoratorPatternExample structural/decorator.cpp)
add_executable(facadePatternExample structural/facade.cpp)
